option('x11', type: 'feature', value: 'auto', description: 'Build X11 dock/strut integration')
option('wayland', type: 'feature', value: 'auto', description: 'Build wlroots wlr-layer-shell integration')
option('wm_backends', type: 'array', value: ['i3', 'hyprland'], choices: ['i3', 'hyprland', 'bspwm', 'qtile', 'ewmh'], description: 'Window manager backends to build')
option('wireplumber', type: 'feature', value: 'auto', description: 'Build the native WirePlumber audio backend (used instead of libpulse when present)')
